<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Registration">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enregistrez vous"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="173dp"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:hint="@string/Email"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:hint="@string/Password"


        />
    <ProgressBar
        android:id="@+id/Progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/bouton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enregistrement"/>
    <TextView
        android:id="@+id/loginNow"

        android:gravity="center"
        android:textStyle="bold"
        android:textSize="19sp"
        android:text="Cliquer pour vous authentifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</androidx.appcompat.widget.LinearLayoutCompat>